--- a/trunk/modules/Hydrogen/Dev/Scaffold/templates/dev/scaffold/templates/model.tmpl
+++ b/trunk/modules/Hydrogen/Dev/Scaffold/templates/dev/scaffold/templates/model.tmpl
@@ -21,7 +21,7 @@ class Model_<%className%> extends CMF_Hydrogen_Model{
 	protected $primaryKey	= "";
 
 	/**	@var	$name		string		List of columns which are a foreign key and/or indexed */
-	protected $indices		= array()
+	protected $indices		= array();
 
 	/**	@var	$fetchMode	interger	Fetch mode, see PDO documentation */
 	protected $fetchMode	= PDO::FETCH_OBJ;
