--- a/trunk/modules/Hydrogen/Work/Mission/css/site.mission.css
+++ b/trunk/modules/Hydrogen/Work/Mission/css/site.mission.css
@@ -14,7 +14,9 @@ tr.row-priority.priority-5 {
 	background-color: rgba(0,255,0,0.20);
 	}
 
-	
+#mission-folders {
+	border: 1px solid #BFBFBF;
+	}
 #mission-folders .panelHead {
 	font-weight: normal;
 	}
