--- a/Work/Mission/css/site.mission.css
+++ b/Work/Mission/css/site.mission.css
@@ -56,3 +56,13 @@ tr.row-priority.priority-5 {
 	box-shadow: 0px 1px 1px white, 0px -1px 1px black;
 */	
 	}
+
+	
+/* css for timepicker */
+.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
+.ui-timepicker-div dl { text-align: left; }
+.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
+.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
+.ui-timepicker-div td { font-size: 90%; }
+.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
+
