--- a/trunk/modules/Hydrogen/Work/Mission/css/site.mission.css
+++ b/trunk/modules/Hydrogen/Work/Mission/css/site.mission.css
@@ -83,15 +83,15 @@ tr.row-priority.priority-5 {
 .ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
 
 button.event span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/date.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/date.png);
 	}
 button.event-add span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/date_add.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/date_add.png);
 	}
 button.task span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/script.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/script.png);
 	}
 button.task-add span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/script_add.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/script_add.png);
 	}
 	
