--- a/trunk/modules/Hydrogen/Work/Notes/css/site.work.note.css
+++ b/trunk/modules/Hydrogen/Work/Notes/css/site.work.note.css
@@ -76,7 +76,7 @@ ul.tags-list li.tag span {
 	display: block;
 	min-height: 18px;
 	padding: 1px 10px 1px 22px;
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/tag_blue.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/tag_blue.png);
 	background-position: 3px 3px;
 	background-repeat: no-repeat;
 	outline: none;
@@ -92,11 +92,11 @@ ul.tags-list li.tag span small{
 
 ul.tags-list li.tag.add span,
 ul.tags-list li.tag.action-add:hover span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/tag_blue_add.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/tag_blue_add.png);
 	}
 ul.tags-list li.tag.remove span,
 ul.tags-list li.tag.action-remove:hover span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/tag_blue_delete.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/tag_blue_delete.png);
 	}
 
 
@@ -131,7 +131,7 @@ ul.links-list li.link span {
 	display: block;
 	min-height: 18px;
 	padding: 1px 10px 1px 22px;
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/link.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/link.png);
 	background-position: 2px 2px;
 	background-repeat: no-repeat;
 	font-size: 1em;
@@ -151,11 +151,11 @@ ul.links-list li.link span.titled {
 	
 ul.links-list li.link.add span,
 ul.links-list li.link.action-add:hover span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/link_add.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/link_add.png);
 	}
 ul.links-list li.link.remove span,
 ul.links-list li.link.action-remove:hover span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/link_delete.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/link_delete.png);
 	}
 
 
@@ -177,10 +177,10 @@ a.nav-button span {
 	padding-right: 5px;
 	}
 a.nav-button.search span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/magnifier.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/magnifier.png);
 	}
 a.nav-button.add span {
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/comment_add.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/comment_add.png);
 	}
 
 	
@@ -194,7 +194,7 @@ li.item-tag-extended button {
 	}
 li.item-tag-extended .item-tag-label {
 	font-weight: bold;
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/tag_blue.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/tag_blue.png);
 	background-repeat: no-repeat;
 	background-position: 0px 2px;
 	padding-left: 22px;
@@ -227,5 +227,5 @@ li.item-tag-extended .item-tag-tray .number-indicator {
 	}
 
 legend.tag{
-	background-image: url(http://icons.ceusmedia.de/famfamfam/silk/tag_blue.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/tag_blue.png);
 	}
