--- a/Work/Notes/css/site.work.note.css
+++ b/Work/Notes/css/site.work.note.css
@@ -23,16 +23,16 @@ ul.results {
 	list-style: none;
 	}
 ul.results li.note {
-	clear: both;
+	position: relative;
 	padding-bottom: 1px;
+	border-bottom: 1px dotted #BFBFBF;
 	margin-bottom: 5px;
-	border-bottom: 1px dotted gray;
-	min-height: 30px;
-	
+	min-height: 50px;
 	}
+
 ul.results a.link {
 	margin: 0px 4px;
-	font-size: 0.8;
+	font-size: 0.8em;
 	color: #005F00;
 	text-decoration: none;
 	}
@@ -41,9 +41,20 @@ ul.results li.note .note-title {
 	}
 ul.results li.note .note-title a {
 	text-decoration: none;
+	line-height: 1.5em;
+	}
+ul.results li.note:last-child {
+	border-bottom: 0px;
+	}
+ul.results li.note div.info-inline {
+	clear: both;
+	height: 18px;
+	margin-top: 0px;
 	}
 
-
+	
+	
+	
 	
 	
 /*  --  list.tags.css  --  */
@@ -100,6 +111,62 @@ ul.tags-list li.tag.action-remove:hover span {
 	}
 
 
+ul.tags-list-inline {
+	margin: 0px;
+	}
+ul.tags-list-inline li {
+	float: left;
+	list-style: none;
+	}
+ul.tags-list-inline li button.tag {
+	cursor: pointer;
+	}
+
+ul.tags-list-inline li button.tag span {
+	display: block;
+	float: left;
+	min-height: 18px;
+	padding: 1px 6px 1px 22px;
+	background-position: 3px 2px;
+	text-shadow: 0px 1px solid white;
+	}	
+button.tag.add span {
+	background-image: url(http://img.int1a.net/famfamfam/silk/tag_blue_add.png);
+	}
+button.tag.remove span {
+	background-image: url(http://img.int1a.net/famfamfam/silk/tag_blue_delete.png);
+	}
+	
+
+
+li.note span.info{
+	display: block;
+	float: left;
+	margin-right: 10px;
+	padding-right: 10px;
+	height: 18px;
+	}
+li.note span.info span{
+	padding-right: 10px;
+	}
+li.note span.date {
+	display: block;
+	float: left;
+	padding-left: 20px;
+	height: 18px;
+	background-repeat: no-repeat;
+	background-position: 0px 2px;
+	background-image: url(http://img.int1a.net/famfamfam/silk/date.png);
+	}
+span.indicator.rating {
+	position: absolute;
+	top: 30px;
+	right: 0px;
+	height: 10px;
+	}
+	
+	
+	
 	
 /*  --  list.links.css  --  */
 /*  --  LINKS  --  */
@@ -226,10 +293,17 @@ li.item-tag-extended .item-tag-tray .number-indicator {
 	border-bottom: 1px solid #DFDFDF;
 	}
 
-legend.tag{
+legend.tag {
 	background-image: url(http://img.int1a.net/famfamfam/silk/tag_blue.png);
+	}
+
+legend.link {
+	background-image: url(http://img.int1a.net/famfamfam/silk/link.png);
 	}
 
 legend.note {
 	background-image: url(http://img.int1a.net/famfamfam/silk/comment.png);
+	}
+legend.note-edit {
+	background-image: url(http://img.int1a.net/famfamfam/silk/comment_edit.png);
 	}
