--- a/Admin/Modules/css/site.admin.module.css
+++ b/Admin/Modules/css/site.admin.module.css
@@ -105,10 +105,13 @@ dl.resources>dd>ul li.missing {
 
 
 span.icon {
+	display: inline-block;
+	min-height: 18px;
 	margin: 0px;
 	padding: 0px;
 	background-repeat: no-repeat;
-	padding-left: 20px;
+	background-position: 1px 1px;
+	padding-left: 22px;
 	min-height: 16px;
 /*	height: 16px;
 	display: block;
@@ -131,6 +134,9 @@ span.icon.style {
 	}
 span.icon.image {
 	background-image: url(http://img.int1a.net/famfamfam/silk/image.png);
+	}
+span.icon.file {
+	background-image: url(http://img.int1a.net/famfamfam/silk/page_white.png);
 	}
 
 span.icon.module {
